--- a/Runner Ball Stack/Packages/manifest.json
+++ b/Runner Ball Stack/Packages/manifest.json
@@ -1,15 +1,16 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.9.0",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.11",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.mobile.android-logcat": "1.2.3",
-    "com.unity.mobile.notifications": "1.4.2",
+    "com.unity.collab-proxy": "1.17.6",
+    "com.unity.ide.rider": "3.0.16",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.mobile.notifications": "2.1.0",
     "com.unity.probuilder": "4.5.2",
     "com.unity.progrids": "3.0.3-preview.6",
-    "com.unity.render-pipelines.universal": "10.6.0",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.render-pipelines.universal": "10.10.1",
+    "com.unity.services.analytics": "4.3.0",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
